--- a/index.css
+++ b/index.css
@@ -1,19 +1,31 @@
 /* Google Font */
 *{
 	font-family: 'Nanum Gothic', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-#test1 {
-	font-family: 'DynaPuff', cursive;
+.carousel-inner > img {
+	width:640px;
+  height:360px
 }
 
-#test2 {
-	font-family: 'Open sans', monospace;
-}
+
 
 #map {display: none;}
 
 #gmap_canvas {
 	width: 100%; 
 	height: 75vh;
+}
+
+footer a, footer p{
+	color: rgba(245, 210, 208, .80);
+	padding-right: 16px;
+}
+
+footer p {
+	font-size: 10px;
+	margin: 0;
 }
